--- a/CombatOverhaul/CombatOverhaul.csproj
+++ b/CombatOverhaul/CombatOverhaul.csproj
@@ -57,6 +57,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Patches\Buffs\Commons\" />
+    <Folder Include="Patches\Blueprints\Buffs\Commons\" />
   </ItemGroup>
 </Project>
