Refactorizado todos lso feats y añadidad mecanica a shifteredge: ahroa aumenta 1% de daño de dex y str si dex es mayor que STR

--- a/CombatOverhaul/CombatOverhaul.csproj
+++ b/CombatOverhaul/CombatOverhaul.csproj
@@ -57,6 +57,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Patches\Blueprints\Buffs\Commons\" />
+    <Folder Include="Patches\Blueprints\Buffs\" />
   </ItemGroup>
 </Project>
