Refactorizacion de features.

--- a/CombatOverhaul/CombatOverhaul.csproj
+++ b/CombatOverhaul/CombatOverhaul.csproj
@@ -61,6 +61,6 @@
 
   <ItemGroup>
     <Folder Include="Blueprints\Buffs\" />
-    <Folder Include="Calculators\" />
+    <Folder Include="Patch\" />
   </ItemGroup>
 </Project>
