Añadido valor base 3 a smitevil resoruces y modificado el newround para que ahroa pueda recibir mas funciones

--- a/CombatOverhaul/CombatOverhaul.csproj
+++ b/CombatOverhaul/CombatOverhaul.csproj
@@ -61,5 +61,6 @@
 
   <ItemGroup>
     <Folder Include="Blueprints\Buffs\" />
+    <Folder Include="Classes\NewRound\Paladin\" />
   </ItemGroup>
 </Project>
