Modificado Stonestrike de paladin

--- a/CombatOverhaul/CombatOverhaul.csproj
+++ b/CombatOverhaul/CombatOverhaul.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Blueprints\ActivatableAbilities\" />
     <Folder Include="Blueprints\Buffs\" />
     <Folder Include="Classes\NewRound\Paladin\" />
   </ItemGroup>
